--- a/package.json
+++ b/package.json
@@ -7,17 +7,22 @@
     "express": "^4.13.0",
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-uglify": "^0.9.1"
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-uglify": "^0.9.1",
+    "jade": "^1.11.0",
+    "sass": "^0.5.0"
   },
   "devDependencies": {
     "grunt-concurrent": "^2.0.0",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-exec": "^0.4.6",
     "grunt-nodemon": "^0.4.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node server/index.js",
+    "production": "NODE_ENV=production node server/index.js"
   },
   "author": "",
   "license": "ISC"
