--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-exec": "^0.4.6",
     "grunt-nodemon": "^0.4.0",
+    "i18next": "^1.10.2",
     "jade": "^1.11.0",
-    "sass": "^0.5.0"
+    "stylus": "^0.51.1"
   },
   "devDependencies": {
     "grunt-concurrent": "^2.0.0",
