--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "express": "^4.13.0",
     "grunt": "^0.4.5",
     "grunt-contrib-uglify": "^0.9.1",
+    "grunt-env": "^0.4.4",
     "grunt-exec": "^0.4.6",
+    "grunt-forever": "^0.4.7",
     "grunt-nodemon": "^0.4.0",
     "i18next": "^1.10.2",
     "jade": "^1.11.0",
